# wttr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  domain.rs  icons.rs  lib.rs  main.rs  waybar.rs
