[package]
name = "wttr"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Clement Bramy <clement.bramy@gmail.com>"]

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.3.0", features = ["json"] }

[profile.release]
lto = "fat"       # link-time optimization, aggressive inlining
codegen-units = 1 # single unit = better optimization
panic = "abort"   # removes unwinding info
strip = true      # removes debug symbols from the final binary
opt-level = "z"   # size-optimized codegen
