[package]
name = "wttr"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Clement Bramy <clement.bramy@gmail.com>"]

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }

[profile.release]
lto = "fat"       # link-time optimization, aggressive inlining
codegen-units = 1 # single unit = better optimization
panic = "abort"   # removes unwinding info
strip = true      # removes debug symbols from the final binary
opt-level = "z"   # size-optimized codegen
